--- a/sass/main.css
+++ b/sass/main.css
@@ -321,15 +321,12 @@ main .intro .explore-btn:hover {
 
 main .functionality {
   background-color: #fff;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 20px;
+  padding: 20px;
 }
 main .functionality .steps {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding-right: 20px;
 }
 @media (min-width: 1024px) {
   main .functionality .steps {
